<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TabHost
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary">

                <android.support.design.widget.TabLayout
                    android:id="@+id/s_tabl"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:tabIndicatorColor="@android:color/white">

                    <android.support.design.widget.TabItem
                        android:id="@+id/login_s"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Sign In"
                        android:textColor="@color/White" />

                    <android.support.design.widget.TabItem
                        android:id="@+id/reg_s"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Sign Up"
                        android:textColor="@color/White" />

                </android.support.design.widget.TabLayout>
            </TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/s_login"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:visibility="visible"
                    android:weightSum="1">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/log_in"
                        android:textColor="?android:attr/textColorHint"
                        android:textSize="30sp" />

                    <EditText
                        style="@style/FullWidthEditText"
                        android:id="@+id/l_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/your_email"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/colorPrimaryDark"
                        />

                    <EditText
                        style="@style/FullWidthEditText"
                        android:id="@+id/l_pass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/your_password"
                        android:inputType="textPassword" />

                    <Button
                        android:theme="@style/MyButton"
                        android:id="@+id/s_loginB"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:background="@color/colorPrimary"
                        android:text="@string/sign_in"
                        android:textColor="@color/White"/>

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="5dp"
                        android:gravity="center_horizontal"
                        android:text="@string/or"
                        android:textColor="?android:attr/textColorHint"
                        android:textSize="25sp" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="Google"
                        android:textColor="?android:attr/textColorHint"
                        android:textSize="15sp" />

                    <com.google.android.gms.common.SignInButton
                        android:id="@+id/Gsign_in_b"
                        android:layout_width="256dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal">

                    </com.google.android.gms.common.SignInButton>

                    <TextView
                        android:id="@+id/err_l"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:drawableBottom="@android:color/holo_red_light"
                        android:textColor="@android:color/holo_red_dark"
                        android:textSize="16sp"
                        android:visibility="gone" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/s_reg"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/register_with_email"
                        android:textColor="?android:attr/textColorHint"
                        android:textSize="20sp" />

                    <EditText
                        style="@style/FullWidthEditText"
                        android:id="@+id/r_nn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="17dp"
                        android:ems="10"
                        android:hint="@string/your_name"
                        android:inputType="textPersonName" />

                    <EditText
                        style="@style/FullWidthEditText"
                        android:id="@+id/r_srn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/your_surname"
                        android:inputType="textPersonName" />

                    <EditText
                        style="@style/FullWidthEditText"
                        android:id="@+id/r_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/your_email"
                        android:inputType="textEmailAddress" />

                    <EditText
                        style="@style/FullWidthEditText"
                        android:id="@+id/r_pass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/your_password"
                        android:inputType="textPassword" />


                        <Button
                            android:id="@+id/r_reg"
                            android:layout_width="match_parent"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:layout_height="wrap_content"
                            android:background="@color/colorPrimary"
                            android:text="@string/register"
                            android:textColor="@color/White"/>


                    <TextView
                        android:id="@+id/err_r"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_weight="0.51"
                        android:textColor="@android:color/holo_red_dark"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/err_rd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_weight="0.51"
                        android:text="@string/note_that_we_are_ignoring_characters_such_as_on_input_fileds"
                        android:textColor="@android:color/holo_red_dark"
                        android:textSize="16sp" />



                </LinearLayout>

            </FrameLayout>
        </LinearLayout>
    </TabHost>
</RelativeLayout>